# local-biz-ai-assistant

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  app.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  security.yml
docs/: architecture.md  draft-pr-description.md  github-project-setup.md  integrations.md  openai-codex-oss-application-readiness.md  release-notes-v0.1.0.md  release-v0.1.0.md
examples/: business_profile.json  queries.json
src/local_biz_ai_assistant/: __init__.py  __main__.py  api.py  cli.py  config.py  errors.py  intent.py  models.py  providers.py  service.py
src/local_biz_ai_assistant/data/: default_business.json
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_providers.py  test_service.py
